# bald_spider

./: ARCHITECTURE.md  CHANGELOG.md  DEVELOPMENT_GUIDE.md  LICENSE  PROJECT_OVERVIEW.md  README.md  TECH_STACK_AND_PREFERENCES.md  main.py  pyproject.toml
.codeflicker/specs/: 修复 Python 3.10+ 类型注解弃用问题.md  修复 downloader debug 日志不输出问题.md  修复 run.py 运行错误.md  修复并发数显示为0的问题.md
.kwaipilot/specs/fix_downloader_error/: design.md  requirements.md
bald_spider/: __init__.py  crawler.py  event.py  exceptions.py  main.py  stats_collector.py  subscriber.py  task_manager.py
bald_spider/core/: baidu.py  downloader.py  engine.py  processor.py  scheduler.py
bald_spider/core/downloader/: __init__.py  aiohttp_downloder.py  httpx_downloader.py
bald_spider/http/: request.py  response.py
bald_spider/items/: __init__.py  items.py
bald_spider/middleware/: __init__.py  default_header.py  download_delay.py  middleware_manager.py  request_ignore.py  response_code.py  response_filter.py  retry.py
bald_spider/settings/: default_settings.py  settings_manager.py  settins_manager.py
bald_spider/spider/: __init__.py
bald_spider/utils/: __init__.py  date.py  log.py  pqueue.py  project.py  spider.py  system.py
bald_spider/utils/settings/: settins_manager.py
tests/: __init__.py  test_main.py
tests/baidu_spider/: baidu.py  crawler.py  items.py  middleware.py  run.py  settings.py  setttings.py
tests/baidu_spider/spiders/: baidu.py  baidu2.py
tests/misc/: asyncio_semaphore_tutorial.py  getitem_setitem_demo.py  magic_methods_demo.py  set_performance_demo.py  settings_reader.py
